manifests/overlays/prod/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cloud-82202374-app
  namespace: cloud-82202374-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: cloud-82202374-app
  template:
    metadata:
      labels:
        app: cloud-82202374-app
    spec:
      containers:
        - name: cloud-82202374-app
          image: ce82202374acr.azurecr.io/cloud-sample:latest
          ports:
            - containerPort: 8080
          volumeMounts:
            - mountPath: /mnt/cloud-sample
              name: cloud-82202374-app-volume
              subPath: cloud-82202374-app
            - mountPath: /config
              name: application-properties
              readOnly: true
          command: ["java", "-jar", "/app/template-0.0.1-SNAPSHOT.jar", "--spring.profiles.active=prod"] 
          args: ["--spring.config.location=file:/config/application.yml"]
      volumes:
        - name: cloud-82202374-app-volume
          persistentVolumeClaim:
            claimName: cloud-82202374-app-pvc
        - name: application-properties
          configMap:
            name: cloud-82202374-app-config
            items:
              - key: application.yml
                path: application.yml
