manifests/overlays/prod/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: cloud-82202374-app
  namespace: default
spec:
  selector:
    app: cloud-82202374-app
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
  type: ClusterIP
